kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-app
  labels:
    name: payment-app
